test/bad/classes/constructor01.px

class Test def
    constructor() def
        return this
